samples/_failures_safe/1761600549_26c8b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75126880.c: In function ‘main’:
./samples/SAFE/__tmp_75126880.c:136:5: error: expected declaration or statement at end of input
  136 |     }
      |     ^
